--- a/themes/kiera/i18n/en.toml
+++ b/themes/kiera/i18n/en.toml
@@ -6,7 +6,7 @@ one = "One minute read"
 other = "{{.Count}} minutes read"
 
 [readMore]
-other = "Read more…"
+other = "Read more →"
 
 [draft]
 other = "DRAFT"
